--- a/bc-react/src/components/Admin/todo
+++ b/bc-react/src/components/Admin/todo
@@ -8,3 +8,22 @@
 - Fix search bar for numbers
 
 eventually to make the layout responsive, we should use max/min height and width css
+
+places and users:
+ACTIVE
+INACTIVE
+
+only display and pull from ACTIVE
+
+
+add hidden class forlayout stuff
+
+if somethings not working right and its a reserved tag, try doing it with a div
+
+css tricks a guide to flexbox
+the way it's lined out, it's all in rows. to get columns, it's turned 90 degrees. to space out columns is not ideal, can get around it by
+making a column and putting rows in columns
+by default, everything is flex-direction: row
+
+
+          {/* //when something's at medium size, the width of the column will be 4, when it's small size it's 3. There's also xs */}
