--- a/bc-react/src/components/Admin/todo
+++ b/bc-react/src/components/Admin/todo
@@ -27,3 +27,13 @@ by default, everything is flex-direction: row
 
 
           {/* //when something's at medium size, the width of the column will be 4, when it's small size it's 3. There's also xs */}
+
+          //align self to override alignitems for specific item in flex
+          //flex is all in proportion to other flex values
+          //flex is shorthand for setting flex-grow and flex-shrink to 1
+          //flex-basis takes pixels; in an ideal world, this item would be this size
+          default: when there is extra room, don't do anything
+          flex-grow: take up the extra room
+          it's not about the size of the items; it's about the size of the extra space
+          the default flex-shrink is 1; when there's not enough room, just evenly divide amongst yourselves
+          flex: first you say the grow, then the shrink, then the basis
